# embedded-py-runtime

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_COVERAGE_REPORT.md  Dockerfile.test  Doxyfile  IMPLEMENTATION_REPORT_FINAL.md  NEXT_STEPS.md  README-c11-embedded.md  README.md  docker-compose.test.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/scripts/: common.sh
config/: debug-openocd.json  mirrors.json  platform-cortex-m4.json  toolchain.json
docs/: 002-coverage-report.md  002-performance-report.md  BUILD_REPORT_002.md  CODE_COVERAGE_REPORT.md  COMPLETION_SUMMARY_002.md  DOCKER_QUICKSTART.md  DOCKER_TEST_GUIDE.md  FINAL_IMPLEMENTATION_REPORT_002.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_REPORT_002.md  SESSION_SUMMARY.md  plcopen-README.md  plcopen-user-manual-zh.md  toolchain-setup-guide.md
docs/reports/: IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md
examples/plcopen/: CMakeLists.txt
examples/plcopen/filter_demo/: CMakeLists.txt  main.c
examples/plcopen/full_system_demo/: CMakeLists.txt  main.c
examples/plcopen/pid_control_demo/: CMakeLists.txt  main.c
include/plcopen/: common.h  fb_deadband.h  fb_derivative.h  fb_integrator.h  fb_limit.h  fb_pid.h  fb_pt1.h  fb_ramp.h  plcopen.h
scripts/: common.sh
scripts/debug/: connect-gdb.sh  start-debug-server.sh
scripts/docker/: build-test-image.sh  generate-coverage-report.sh  run-cppcheck.sh  run-performance-test.sh  run-tests-in-docker.sh
scripts/setup/: configure-environment.sh  install-toolchain.sh  verify-toolchain.sh
specs/001-c11-embedded-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-c11-embedded-env/checklists/: requirements.md
specs/001-c11-embedded-env/contracts/: script-interface.md
specs/002-plcopen-function-blocks/: plan.md  research.md  spec.md  tasks.md
specs/002-plcopen-function-blocks/checklists/: requirements.md
specs/003-embedded-plcopen-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-embedded-plcopen-app/checklists/: requirements.md
specs/003-embedded-plcopen-app/contracts/: README.md
src/plcopen/: common.c  fb_deadband.c  fb_derivative.c  fb_integrator.c  fb_limit.c  fb_pid.c  fb_pt1.c  fb_ramp.c
templates/cmake/: CMakeLists.txt.template  toolchain-arm-cortex-m4.cmake
templates/examples/blinky/: CMakeLists.txt  linker.ld  main.c  startup.s
templates/examples/hello-c11/: CMakeLists.txt  README.md  main.c
tests/debug/: test_debug_server.bats
tests/integration/: test_full_workflow.bats
tests/plcopen/: CMakeLists.txt  test_common.c  test_fb_deadband.c  test_fb_derivative.c  test_fb_integrator.c  test_fb_limit.c  test_fb_pid.c  test_fb_pt1.c  test_fb_ramp.c  test_performance.c  test_runner.c
tests/toolchain/: test_compile.bats  test_install.bats
